--- a/lib/src/printed_card/printed_card.css
+++ b/lib/src/printed_card/printed_card.css
@@ -1,5 +1,7 @@
 .printed-card {
-    margin-top: 10px;
     padding: 10px;
     background-color: white;
+}
+#printed-action {
+    margin-bottom: 10px;
 }
